syntax = "proto3";

package go.micro.srv.applicationservice;

service Applicationservice {
    rpc GetAllPersons (Message) returns (AllPersonResponse) {
    }

}

message Message {
    string say = 1;
}


message Person {
    string name = 1;
    string age = 2;
    string job= 3;
    string id = 4;
}

message AllPersonResponse {
    repeated Person persons = 1;
}

message Request {
    string name = 1;
}

message Response {
    string msg = 1;
}

message StreamingRequest {
    int64 count = 1;
}

message StreamingResponse {
    int64 count = 1;
}

message Ping {
    int64 stroke = 1;
}

message Pong {
    int64 stroke = 1;
}
